# The-Builder-Ops

./: .env.example  .gitignore  README.md  pyproject.toml  setup_project.sh
.streamlit/: config.toml
app/: main.py  session.py  styles.py
app/components/: chat_window.py  login.py  sidebar.py
config/: logging.py  settings.py
core/: sync_state.py
core/auth/: clickup_oauth.py  google_oauth.py
core/chat/: agent.py  chain.py  memory.py  prompts.py
core/integrations/: base.py  clickup.py  google_drive.py
core/llm/: config.py  factory.py
core/rag/: embeddings.py  loader.py  retriever.py  vectorstore.py
core/tools/: clickup_tools.py  drive_tools.py
scripts/: reindex.py
services/: chat_service.py  document_service.py  integration_service.py
tests/unit/: test_integration_service.py
