[project]
name = "enterprise-assistant"
version = "0.1.0"
description = "Asistente empresarial con LangChain, Google Drive y ClickUp"
requires-python = ">=3.11"

dependencies = [
    # UI
    "streamlit>=1.57.0",
    # LangChain core
    "langchain>=1.3.2",
    "langchain-core>=1.0.0",
    "langchain-community>=0.3.0",
    # LLM providers
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.1.3",   # Usa SDK google-genai unificado (desde 4.0.0)
    # RAG
    "langchain-chroma>=1.1.0",
    "chromadb>=1.5.9",
    # Integraciones Google
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.4.0",
    # Config y utilidades
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.1",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "services", "config"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
